add_executable(test_sjalloc test_sjalloc.cpp)
add_executable(test_stl_find test_stl_find.cpp)
add_executable(test_mylist test_mylist.cpp)
add_executable(test_vector test_vector.cpp)
add_executable(test_list test_list.cpp)
add_executable(test_deque test_deque.cpp)
add_executable(test_stack test_stack.cpp)
add_executable(test_queue test_queue.cpp)